Implement privacy mode UI behind toggle (#22502)

--- a/translations/en.json
+++ b/translations/en.json
@@ -20,7 +20,7 @@
   "accept-and-share-address": "Accept and share address",
   "accept-community-rules": "I agree with the community rules",
   "accept-new-chats-from": "Accept new chats from",
-  "accept-status-tos-prefix": "By proceeding you accept Status ",
+  "accept-status-tos-prefix": "By proceeding you agree with Status",
   "accepted": "Accepted",
   "access-existing-keys": "Access existing keys",
   "access-key": "Access key",
@@ -820,8 +820,10 @@
   "disable-all": "Disable all",
   "disable-later-in-settings": "You can disable this later in Settings",
   "disable-light-client": "Disable Light Client?\n\nYou’ll need to log in again.",
+  "disable-privacy-mode": "Disable privacy mode",
   "disable-store-confirmations": "Disable Store confirmations?\n\nYou’ll need to log in again.",
   "disabled": "Disabled",
+  "disabled-2": "disabled",
   "discard": "Discard",
   "discard-changes?": "Discard changes?",
   "disconnect": "Disconnect",
@@ -928,7 +930,9 @@
   "enable-notifications": "Enable notifications",
   "enable-notifications-info-description": "Describe how using Firebase affects privacy.",
   "enable-notifications-sub-title": "Receive notifications about your new messages, wallet transactions and news",
+  "enable-privacy-mode": "Enable privacy mode",
   "enable-store-confirmations": "Enable Store confirmations?\n\nYou’ll need to log in again.",
+  "enabled": "enabled",
   "enabled-push-notifications": "Enable push notifications",
   "encrypt-with-password": "Encrypt with password",
   "encrypted-key-pairs": "Encrypted key pairs",
@@ -1090,10 +1094,17 @@
   "favourites": "Favourites",
   "favourites-empty": "Addresses added to favourites will appear here",
   "feature-flags": "Feature Flags",
+  "feature-that-will-be-unavailable": "Features that will be unavailable:",
+  "feature-that-will-be-unavailable-item-1": "Wallet (Swap, Send, Token data, etc.)",
+  "feature-that-will-be-unavailable-item-2": "Market (Token data, prices, and news, etc.)",
+  "feature-that-will-be-unavailable-item-3": "Token-gated communities",
+  "feature-that-will-be-unavailable-item-4": "Mobile Push-notifications",
+  "feature-that-will-be-unavailable-item-5": "Status news, etc.",
   "feature-unavailable": "Feature unavailable",
   "feature-unavailable-for-keycard-description": "It’s not currently supported for Keycard users.",
   "feature-unavailable-info": "If you'd like this feature on mobile, feel free to ",
   "featured": "Featured",
+  "features-and-balances-disabled": "Balances and some features are unavailable",
   "feb": "Feb",
   "fee-cap": "Fee cap",
   "fee-current-gwei": "Current: {{current}} GWEI",
@@ -1397,6 +1408,7 @@
   "joined": "Joined",
   "joined-community": "You joined “{{community}}”",
   "joined-group-chat-description": "You've joined {{group-name}} from invitation by {{username}}",
+  "joining-token-gated-communities-disabled": "Joining token-gated communities is disabled.",
   "jul": "Jul",
   "jun": "Jun",
   "just-introduce-yourself": "Introduce yourself",
@@ -2127,6 +2139,10 @@
   "priority-fee-lower": "Lower than suggested: {{low}} - {{high}}",
   "privacy": "Privacy",
   "privacy-and-security": "Privacy and security",
+  "privacy-mode": "Privacy mode",
+  "privacy-mode-message-1": "Status uses essential third-party services to make your experience more convenient, efficient, and engaging. While only necessary integrations are included, users who prefer to avoid any external services can disable them entirely - though this may limit functionality and affect usability.",
+  "privacy-mode-message-2": "Only disable third-party services if you're aware of the trade-offs. Re-enable them anytime in Settings.",
+  "privacy-mode-more-details": "More details about third-party services",
   "privacy-photos": "Profile Photo Privacy",
   "privacy-policy": "Privacy policy",
   "privacy-show-to-warning": "People who have already seen your profile picture will continue to do so",
@@ -2681,6 +2697,7 @@
   "th": "Th",
   "thank-you": "Thank you",
   "the-key-pair-and-derived-accounts-will-be-removed": "The key pair and derived accounts will be removed from all of your synced devices. Make sure you have a backup of your keys or seed phrase before proceeding.",
+  "third-party-services": "Third-party services ",
   "this-account-has-no-activity": "This account has no activity",
   "this-address-has-activity": "This address has activity",
   "this-address-has-no-activity": "This address has no activity",
@@ -3092,6 +3109,9 @@
   "you-hodl": "You hodl:",
   "you-hold-number-of-hold-tokens-of-these": "You hold {{number-of-hold-tokens}} of these:",
   "you-like-to-type-43-characters": "Do you like to type 43 characters?",
+  "you-may-also-experience": "You may also experience:",
+  "you-may-also-experience-item-1": "Missing or invalid data",
+  "you-may-also-experience-item-2": "Errors and unexpected behavior",
   "you-must-always-hold": "You must always hold:",
   "you-must-hold": "You must hodl:",
   "you-must-now-hold": "You must now hold:",
