Feature/news feed copy (#22626)
* [#22404] [News Feed] Implement News AC component

* QA

* Incoming rss feed sanitized from html tags.

* test fix

* test

* use fast-image instead of rn image to avoid problem on android

* uncomment marking as read

---------

Co-authored-by: andrey <motor4ik@gmail.com>

--- a/translations/en.json
+++ b/translations/en.json
@@ -1847,6 +1847,7 @@
   "new-tab": "New tab",
   "new-to-status": "I’m new to Status",
   "new-ui": "New UI",
+  "news": "News",
   "next": "Next",
   "next-you-will": "Next, you will be asked to confirm the position of certain words in your recovery phrase",
   "NFT": "NFT",
@@ -2337,6 +2338,7 @@
   "rpc-usage-info": "RPC usage stats",
   "rpc-usage-reset": "Reset",
   "rpc-usage-total": "Total",
+  "rss-privacy-warning": "Fetches news from external sites which may expose your IP",
   "sa": "Sa",
   "safe-estimate": "Safe estimate",
   "sat": "Sat",
@@ -2614,6 +2616,7 @@
   "status-is-open-source": "Status is open-source",
   "status-keycard": "Status Keycard",
   "status-mobile-descr": "Status tends to use a lot of data when syncing chats. You can choose not to sync when on mobile network",
+  "status-news-rss": "Receive Status News via RSS",
   "status-not-sent-click": "Not confirmed. Click for options",
   "status-not-sent-tap": "Not confirmed. Tap for options",
   "status-pending": "Pending",
