feat: Local backup functionality (#22646)
* Added "enable message syncing" checkbox

https://github.com/status-im/status-go/compare/41a1d4b9...b7c853da

* Added "Backup" settings screen with backup button

* fix: fixed backup sharing for Android

* fix: update range of fastlane gem

* fix: one more fix for Android backup sharing

* Add message backup toggle

* fix: linting errors

* fix: added error toasts

* fix: now local backup path set from mobile client. Fixes android sharing issue

* fix: switch to status-go with local backup changes

https://github.com/status-im/status-go/compare/41a1d4b9...79b8fe9b

* fix: certificate access permissions after match

---------

Co-authored-by: Siddarth Kumar <siddarthkay@gmail.com>

--- a/translations/en.json
+++ b/translations/en.json
@@ -194,15 +194,20 @@
   "back-up-seed-phrase": "Backup recovery phrase",
   "back-up-your-seed-phrase": "Backup your recovery phrase",
   "backing-up": "Backing up...",
+  "backup": "Backup",
+  "backup-completed": "Backup completed successfully",
+  "backup-data-locally": "Backup data locally",
   "backup-disabled": "Disabled",
   "backup-empty-keycard-only": "You can only back up to an empty Keycard.",
   "backup-enabled": "Enabled",
   "backup-keycard": "Backup Keycard",
   "backup-keycard-created": "Backup Keycard successfully created",
   "backup-keycard-instructions": "You’ll need an empty Keycard to create backup. You’ll be able to create a different PIN for backup Keycard. It might make sense to mark your Keycards, so you don’t mix them up.",
+  "backup-messages-locally": "Backup messages locally",
   "backup-recovery-phrase": "Backup recovery phrase",
   "backup-recovery-phrase-description": "Save in a secure place that only you control, these 12 words give access to all of your funds.",
   "backup-settings": "Backup settings",
+  "backup-sharing-error": "Error sharing backup",
   "backup-step-1": "Find pen and paper",
   "backup-step-2": "Write down your recovery phrase",
   "backup-step-3": "Find a place to store it",
@@ -924,6 +929,9 @@
   "enable-camera": "Enable camera",
   "enable-light-client": "Enable Light Client?\n\nYou’ll need to log in again.",
   "enable-link-previews": "Enable link previews in chat?",
+  "enable-local-messages-backup": "Enable Local Messages Backup",
+  "enable-local-messages-backup-description": "Your encrypted messages will be stored locally on this device for backup purposes.",
+  "enable-message-syncing": "Enable message syncing",
   "enable-network-access": "Enable network access",
   "enable-network-to-sign-requests": "to sign requests from",
   "enable-news-notifications-third-party": "Include notifications delivered through third-party providers",
@@ -1571,6 +1579,7 @@
   "load-more-messages": "↓ Fetch more messages",
   "load-more-timeline": "↓ Fetch more",
   "loading": "Loading...",
+  "local-backup": "Local backup",
   "local-notifications": "Local notifications",
   "local-notifications-subtitle": "Enable background service",
   "local-pairing-experimental-mode": "Local Pairing Mode (alpha)",
@@ -2678,6 +2687,7 @@
   "synced-with": "Synced with",
   "synchronise-your-data-across-your-devices": "Synchronise your data across your devices",
   "syncing": "Syncing",
+  "syncing-and-backup": "Syncing and Backup",
   "syncing-connection-message": "App uses a lot of data when syncing and making backups. If you have a limited data plan, consider syncing over Wi-Fi only. ",
   "syncing-devices": "Syncing...",
   "syncing-wifi-connection-warning": "If you choose to sync over Wi-Fi only, messages sent to you while you are offline will be delivered once you connect to Wi-Fi.",
