Update the app name, logo (#22650)
* Status renamed to Status Legacy

* Android icon resources changed

* ios resource icons changed

ios filenames return to normal

--- a/android/app/src/debug/res/values/strings.xml
+++ b/android/app/src/debug/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Status Debug</string>
+    <string name="app_name">Status Legacy Debug</string>
 </resources>
